fixed some layout bugs

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,13 +9,10 @@ body{
     background-color: #4A4A4A;
     font-family: 'Oswald', sans-serif;
     
-    #bgimg{
-        background-image: url("../images/cinema.jpg");
-        background-size: cover;
-        background-attachment: fixed;
-        mix-blend-mode: color-dodge;
-        z-index: -10;
-    }
+    background-image: url("../images/cinema.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: color-dodge;
 
     .navigation{
         background-color: #3e3e3e;
@@ -82,4 +79,14 @@ body{
         }
     }
 
+    .GrayText{
+        color: #838383;
+        font-size: 10rem;
+        font-weight: 700;
+    }
+    .RedText {
+        color: #FF375B;
+        font-size: 10rem;
+        font-weight: 700;
+    }
 }
